// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex Nested flex 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-flex"
  >
    <div
      class="pf-v6-l-flex"
    >
      <div
        class=""
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex Simple flex with single item 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-flex"
  >
    <div
      class=""
    >
      Test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Flex alternative component 1`] = `
<DocumentFragment>
  <ul
    class="pf-v6-l-flex"
  >
    <li
      class=""
    >
      Test
    </li>
  </ul>
</DocumentFragment>
`;
